--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+        <h1><marquee behavior="ANIMATION" direction="right">TAB ANIMATION</marquee></h1>
+
     <center>
     <h1>Content.html</h1>
     <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit.</p>
